2000-07-04  Dave Peticolas  <dave@krondo.com>

	* src/scm/bootstrap.scm.in: bump up the stack limit

	* src/engine/date.c (xaccValidateDate): move this function from
	src/register/datecell.c to here, so it can be used elsewhere.

	* src/gnome/gnc-dateedit.c: make the widget respond to the same
	accelerators as the register date cell.

2000-07-03  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/c-interface.scm: Added scheme definition for
	pointer-token-null? if not already defined by g-wrap. Fixes bug
	when compiling with g-wrap >= 0.9.4.

2000-06-28  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-budget.c (entry_down_button_clicked): bug fix.

	* src/gnome/dialog-options.c: implement font options.

	* src/scm/prefs.scm: add options for the register fonts.

	* src/gnome/top-level.c: configure the register fonts from
	callbacks.

	* src/register/gnome/gnucash-style.c: make the register font and
	hint fonts configurable outside the register.

2000-06-28  Robert Graham Merkel  <rgmerk@mira.net>

	* src/gnome/dialog-totd.c: If somebody tries to open a second
	tip of the day window, just raise the original.  Fixes a crash
	when somebody tried to do this before.

2000-06-27  Robert Graham Merkel  <rgmerk@mira.net>

	* src/gnome/dialog-totd.c: Added code to make "Tip of the day"
	dialog modeless

2000-06-27  Dave Peticolas  <dave@krondo.com>

	* src/gnome/top-level.c (gnucash_ui_init): set the reconciled cell
	string getter to the dialog-utils function for i18ning the reconcile
	flag value.

	* src/engine/Transaction.c (xaccSplitSetReconcile): make sure the
	reconciled flag given is good.

	* src/register/splitreg.c: modify for the changes in the reconcile
	cell.

	* src/SplitLedger.c: modify for the changes in the reconcile cell.

	* src/register/recncell.c: make the reconcile cell a real object,
	not just a BasicCell with some extra functions. Add functionality
	for distinguishing between the flag value and the displayed value.
